arreglo para chrome

--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,26 @@
       });
     }
   </script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-firestore.js"></script>
+  <script>
+    // TODO: Replace the following with your app's Firebase project configuration.
+    // See: https://support.google.com/firebase/answer/7015592
+    var firebaseConfig = {
+      apiKey: "AIzaSyAn8h0xN9ogJbM4FAoGr_a3cSJYvgI9laI",
+      authDomain: "goodreminder-590ef.firebaseapp.com",
+      databaseURL: "https://goodreminder-590ef.firebaseio.com",
+      projectId: "goodreminder-590ef",
+      storageBucket: "goodreminder-590ef.appspot.com",
+      messagingSenderId: "...",
+      appId: "1:...:web:...",
+      measurementId: "G-..."
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
+  <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-analytics.js"></script>
   <script src="main.dart.js" type="application/javascript"></script>
+
 </body>
 </html>
