--- a/web/index.html
+++ b/web/index.html
@@ -42,6 +42,7 @@
   </script>
   <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
   <script>
     // TODO: Replace the following with your app's Firebase project configuration.
     // See: https://support.google.com/firebase/answer/7015592
